# kokona

./: LICENSE  README.md  config.yml  kokona.cabal  stack.yaml
app/: Main.hs
src/: Common.hs  Config.hs  Fortune.hs  Kansha.hs  Lib.hs  Threading.hs  Trip.hs
