name:                kokona
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Koshroy/kokona#readme
license:             BSD3
license-file:        LICENSE
author:              Koushik Roy
maintainer:          meff@meff.me
copyright:           October 2016
category:            tool
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base-noprelude
                     , classy-prelude
                     , haskakafka
                     , lens
                     , lens-aeson
                     , Command
                     , aeson
                     , yaml
                     , filepath
                     , parsec
  other-modules:       Config
                     , Common
                     , Kansha
                     , Trip
                     , Fortune
  default-language:    Haskell2010

executable kokona-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base-noprelude
                     , kokona
  default-language:    Haskell2010

test-suite kokona-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base-noprelude
                     , kokona
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Koshroy/kokona
